--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "framework7.angular",
-  "version": "2.0.beta",
+  "version": "2.0",
   "description": "Full Featured Mobile HTML Framework For Building iOS & Android Apps using Angularjs",
   "main": "dist/js/framework7.js",
   "repository": {
