Upgraded the Framework7 library and mappings. Restructured the folder #18

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "framework7.angular",
-  "version": "2.0",
+  "version": "2.1",
   "description": "Full Featured Mobile HTML Framework For Building iOS & Android Apps using Angularjs",
-  "main": "dist/js/framework7.js",
+  "main": "dist/framework7.angular.hook.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/ashvin777/framework7.angular.git"
