--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "url": "https://github.com/ashvin777/framework7.angular"
   },
   "description": "Full Featured Mobile HTML Framework For Building iOS & Android Apps using AngularJS and Framework7",
-  "version": "2.0.beta",
+  "version": "2.1",
   "author": "Ashvin Suthar",
   "homepage": "",
   "keywords": [
@@ -30,12 +30,9 @@
     "googleplay"
   ],
   "scripts": [
-    "dist/js/framework7.js"
+    "dist/framework7.angular.hook.js"
   ],
   "main": "dist/",
-  "styles": [
-    "dist/css/framework7.css"
-  ],
   "license": [
     "MIT"
   ],
