--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "engines": {
     "node": ">= 0.10.0"
   },
-  "dependencies": {
+  "devDependencies": {
     "jshint": "~2.9.1",
     "gulp": "~3.9.0",
     "gulp-less": "~3.0.5",
